<resources>
    <string name="app_name">TalQuest</string>
    <string name="signin">sign in</string>
    <string name="Login">Log in</string>
    <string name="signIn">who are you ?</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="facebook_app_id">157073281464583</string>
    <string name="consumer_key">nrT2l7Aa4HLkQi8s0pQ7tzPvq</string>
    <string name="consumer_Secret">X2OPDH0Na7gVW1TUjGGqTyBFBzTfDv2oVmaBkktpCm1QE4JS2q</string>
    <string name="vertical_form_stepper_form_continue">next</string>
    <string name="eMail">Email</string>
    <string name="FirstName">FirstName</string>
    <string name="LastName">LastName</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Country">Country</string>
    <string name="Postcode">Post code</string>
    <string name="JobTitle">Job Title</string>
    <string name="Company">Company</string>
    <string name="Sector">Sector</string>
    <string name="Register">Register</string>
    <string name="confirm_the_new_password">Confirm the new password</string>
    <string name="creationDate">Creation date</string>
    <string name="nbreOfemployee">Number of Employee</string>
    <string name="choose">choose</string>
    <string name="signup">sign up</string>
    <string name="try_again">try again</string>
    <string name="cancel">cancel</string>
    <string name="create_an_account">Create An Account</string>
</resources>