<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_horizontal_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person_pin" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#FFFFFF">

                <EditText
                    android:inputType="textPersonName"
                    android:textColor="@android:color/white"
                    android:id="@+id/signUpCompany"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Company"
                    android:textColorHint="#EFEFEF" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person_pin" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/JobTitle"
                android:textColor="#EFEFEF" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/signUpJobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginRight="10pt" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10pt"
            android:layout_marginRight="10pt"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:src="@drawable/ic_person_pin" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Sector"
                android:textColor="#EFEFEF" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/signUpSector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10pt"
                android:layout_marginRight="10pt" />
        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton

        android:id="@+id/step5Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="5pt"
        android:layout_marginRight="5pt"
        app:backgroundTint="@color/blue"
        app:srcCompat="@drawable/ic_navigate_next" />

</RelativeLayout>